--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -1,120 +1,125 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EasyRice - ข่าวสารเกษตรกร</title>
 
     <link rel="stylesheet" href="../css/style.css">
-    
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
 
-<header class="navbar">
-    <div class="container">
-        <a href="../" class="logo">🌾 EasyRice</a>
-        <button class="hamburger" id="hamburger" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
-        <nav id="navMenu">
-            <ul>
-                <li><a href="../">หน้าแรก</a></li>
-                <li><a href="product.html">สินค้า</a></li>
-                <li><a href="about.html"class="active">ข่าวสาร</a></li>
-                <li><a href="contact.html">ติดต่อ</a></li>
-            </ul>
-        </nav>
-        <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
-    </div>
-</header>
+    <header class="navbar">
+        <div class="container">
+            <a href="../" class="logo">🌾 EasyRice</a>
+            <button class="hamburger" id="hamburger" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav id="navMenu">
+                <ul>
+                    <li><a href="../">หน้าแรก</a></li>
+                    <li><a href="product.html">สินค้า</a></li>
+                    <li><a href="about.html" class="active">ข่าวสาร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
+                </ul>
+            </nav>
+            <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
+        </div>
+    </header>
 
-<section class="container" style="padding: 60px 20px;">
-    <h2 style="margin-bottom: 40px;">สาระน่ารู้คู่ชาวนา</h2>
+    <section class="container" style="padding: 60px 20px;">
+        <h2 style="margin-bottom: 40px;">สาระน่ารู้คู่ชาวนา</h2>
 
-    <div class="news-grid">
-        <article class="news-card">
-            <div class="news-img-wrapper">
-                <img src="../images/background.png" alt="ต้นกล้า"> </div>
-            <div class="news-content">
-                <p class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</p>
-                <h3>ทำไมต้องใช้ต้นกล้าอายุ 20 วัน?</h3>
-                <p>ต้นกล้าในวัยนี้รากกำลังเดินดี เมื่อนำไปปักดำจะฟื้นตัวเร็ว แตกกอได้ดีกว่าต้นกล้าแก่...</p>
-                <a href="https://newwebs2.ricethailand.go.th/webmain/rkb3/title-index.php-file%3Dcontent.php%26id%3D115-2.htm?utm_source"
-                    class="read-more-btn"
-                    target="_blank">
-                    อ่านต่อ <i class="fas fa-arrow-right"></i>
-                </a>
+        <div class="news-grid">
+            <article class="news-card">
+                <div class="news-img-wrapper">
+                    <img src="../images/background.png" alt="ต้นกล้า">
+                </div>
+                <div class="news-content">
+                    <p class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</p>
+                    <h3>ทำไมต้องใช้ต้นกล้าอายุ 20 วัน?</h3>
+                    <p>ต้นกล้าในวัยนี้รากกำลังเดินดี เมื่อนำไปปักดำจะฟื้นตัวเร็ว แตกกอได้ดีกว่าต้นกล้าแก่...</p>
+                    <a href="https://newwebs2.ricethailand.go.th/webmain/rkb3/title-index.php-file%3Dcontent.php%26id%3D115-2.htm?utm_source"
+                        class="read-more-btn" target="_blank">
+                        อ่านต่อ <i class="fas fa-arrow-right"></i>
+                    </a>
 
-            </div>
-        </article>
+                </div>
+            </article>
 
-        <article class="news-card">
-            <div class="news-img-wrapper">
-                <img src="../images/riceberry.png" alt="นาข้าว"> </div>
-            <div class="news-content">
-                <p class="news-date"><i class="far fa-calendar-alt"></i> 12 ม.ค. 2567</p>
-                <h3>วิธีเลือกพันธุ์ข้าวให้เหมาะกับดิน</h3>
-                <p>ดินเค็ม ดินเปรี้ยว หรือพื้นที่ลุ่มน้ำท่วมถึง การเลือกพันธุ์ข้าวให้ถูกโฉลกกับดินจะช่วยเพิ่มผลผลิต...</p>
-                <a href="https://kas.siamkubota.co.th/knowledge"
-                    class="read-more-btn"
-                    target="_blank">
-                    อ่านต่อ <i class="fas fa-arrow-right"></i>
-                </a>
+            <article class="news-card">
+                <div class="news-img-wrapper">
+                    <img src="../images/riceberry.png" alt="นาข้าว">
+                </div>
+                <div class="news-content">
+                    <p class="news-date"><i class="far fa-calendar-alt"></i> 12 ม.ค. 2567</p>
+                    <h3>วิธีเลือกพันธุ์ข้าวให้เหมาะกับดิน</h3>
+                    <p>ดินเค็ม ดินเปรี้ยว หรือพื้นที่ลุ่มน้ำท่วมถึง
+                        การเลือกพันธุ์ข้าวให้ถูกโฉลกกับดินจะช่วยเพิ่มผลผลิต...</p>
+                    <a href="https://kas.siamkubota.co.th/knowledge" class="read-more-btn" target="_blank">
+                        อ่านต่อ <i class="fas fa-arrow-right"></i>
+                    </a>
 
-            </div>
-        </article>
+                </div>
+            </article>
 
-        <article class="news-card">
-            <div class="news-img-wrapper">
-                <img src="../images/background.png" alt="รถดำนา"> </div>
-            <div class="news-content">
-                <p class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</p>
-                <h3>เทคนิคเตรียมดินก่อนรถดำลง</h3>
-                <p>การปรับหน้าดินให้เรียบเสมอและการรักษาระดับน้ำ เป็นหัวใจสำคัญที่จะทำให้รถดำทำงานได้ราบรื่น...</p>
-                <a href="https://www.rakbankerd.com/agriculture/print.php?id=4137&s=tblrice&"
-                    class="read-more-btn"
-                    target="_blank">
-                    อ่านต่อ <i class="fas fa-arrow-right"></i>
-                </a>
+            <article class="news-card">
+                <div class="news-img-wrapper">
+                    <img src="../images/background.png" alt="รถดำนา">
+                </div>
+                <div class="news-content">
+                    <p class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</p>
+                    <h3>เทคนิคเตรียมดินก่อนรถดำลง</h3>
+                    <p>การปรับหน้าดินให้เรียบเสมอและการรักษาระดับน้ำ เป็นหัวใจสำคัญที่จะทำให้รถดำทำงานได้ราบรื่น...</p>
+                    <a href="https://www.rakbankerd.com/agriculture/print.php?id=4137&s=tblrice&" class="read-more-btn"
+                        target="_blank">
+                        อ่านต่อ <i class="fas fa-arrow-right"></i>
+                    </a>
 
-            </div>
-        </article>
-    </div>
-</section>
+                </div>
+            </article>
+        </div>
+    </section>
 
-<footer>
-    <div class="container">
-        <h3>EasyRice Seedling Hub</h3>
-        <p>แหล่งรวมพันธุกรรมข้าวคุณภาพ เพื่อเกษตรกรไทย</p>
-        <p style="font-size: 0.8rem; margin-top: 20px; color: #aaa;">&copy; 2024 EasyRice. All Rights Reserved.</p>
-    </div>
-</footer>
+    <footer>
+        <div class="container">
+            <h3>EasyRice Seedling Hub</h3>
+            <p>แหล่งรวมพันธุกรรมข้าวคุณภาพ เพื่อเกษตรกรไทย</p>
+            <p style="font-size: 0.8rem; margin-top: 20px; color: #aaa;">&copy; 2024 EasyRice. All Rights Reserved.</p>
+        </div>
+    </footer>
 
-<script src="../js/easyrice.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', updateSignInButton);
+    <script src="../js/easyrice.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', updateSignInButton);
 
-    function toggleMenu() {
-        const hamburger = document.getElementById('hamburger');
-        const navMenu = document.getElementById('navMenu');
-        hamburger.classList.toggle('active');
-        navMenu.classList.toggle('active');
-    }
+        function toggleMenu() {
+            const hamburger = document.getElementById('hamburger');
+            const navMenu = document.getElementById('navMenu');
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        }
 
-    // Close menu when link clicked
-    document.querySelectorAll('#navMenu a').forEach(link => {
-        link.addEventListener('click', () => {
-            document.getElementById('hamburger').classList.remove('active');
-            document.getElementById('navMenu').classList.remove('active');
+        // Close menu when link clicked
+        document.querySelectorAll('#navMenu a').forEach(link => {
+            link.addEventListener('click', () => {
+                document.getElementById('hamburger').classList.remove('active');
+                document.getElementById('navMenu').classList.remove('active');
+            });
         });
-    });
-</script>
+    </script>
 </body>
+
 </html>
