--- a/public/pages/forgot-password.html
+++ b/public/pages/forgot-password.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,16 +17,19 @@
             align-items: center;
             gap: 10px;
         }
+
         .alert-error {
             background-color: #ffebee;
             color: #c62828;
             border: 1px solid #e57373;
         }
+
         .alert-success {
             background-color: #e8f5e9;
             color: #2e7d32;
             border: 1px solid #81c784;
         }
+
         .back-to-login {
             color: #2e7d32;
             text-decoration: none;
@@ -35,11 +38,13 @@
             align-items: center;
             gap: 5px;
         }
+
         .back-to-login:hover {
             text-decoration: underline;
         }
     </style>
 </head>
+
 <body class="login-page-body">
 
     <header class="navbar">
@@ -51,13 +56,13 @@
                 <span></span>
             </button>
             <nav id="navMenu">
-            <ul>
-                <li><a href="../">หน้าแรก</a></li>
-                <li><a href="product.html">สินค้า</a></li>
-                <li><a href="about.html">ข่าวสาร</a></li>
-                <li><a href="contact.html" class="active">ติดต่อ</a></li>
-            </ul>
-        </nav>
+                <ul>
+                    <li><a href="../">หน้าแรก</a></li>
+                    <li><a href="product.html">สินค้า</a></li>
+                    <li><a href="about.html">ข่าวสาร</a></li>
+                    <li><a href="contact.html" class="active">ติดต่อ</a></li>
+                </ul>
+            </nav>
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
         </div>
     </header>
@@ -65,18 +70,48 @@
     <main class="login-main">
         <div class="login-card forgot-card">
             <div class="login-header">
-                <i class="fas fa-key-skeleton" style="font-size: 3rem; color: #FFB74D; margin-bottom: 1rem;"></i>
+                <i class="fas fa-mobile-alt" style="font-size: 3rem; color: #FFB74D; margin-bottom: 1rem;"></i>
                 <h2>ลืมรหัสผ่าน?</h2>
-                <p>ระบุอีเมลของคุณเพื่อรับลิงก์สำหรับตั้งรหัสผ่านใหม่</p>
+                <p>ระบุเบอร์โทรศัพท์ของคุณเพื่อรับรหัส OTP</p>
             </div>
 
-            <form id="forgotForm">
+            <!-- Step 1: Phone Input -->
+            <form id="step1Form">
                 <div class="form-group">
-                    <label for="email">อีเมลที่ลงทะเบียน</label>
-                    <input type="email" id="email" class="form-control" placeholder="example@email.com" required>
+                    <label for="phone">เบอร์โทรศัพท์ที่ลงทะเบียน</label>
+                    <input type="tel" id="phone" class="form-control" placeholder="08xxxxxxxx" required
+                        pattern="[0-9]{10}">
                 </div>
+                <button type="submit" class="btn-primary full-width">รับรหัส OTP</button>
+            </form>
 
-                <button type="submit" class="btn-primary full-width">ส่งลิงก์รีเซ็ตรหัสผ่าน</button>
+            <!-- Step 2: OTP Input (Hidden initially) -->
+            <form id="step2Form" style="display: none;">
+                <div class="form-group">
+                    <label for="otp">รหัส OTP (6 หลัก)</label>
+                    <input type="text" id="otp" class="form-control" placeholder="xxxxxx" required maxlength="6"
+                        style="text-align: center; letter-spacing: 5px; font-size: 1.2rem;">
+                    <small style="color: #666; display: block; margin-top: 5px;">* รหัสจำลอง: ดูใน Console หรือ
+                        Alert</small>
+                </div>
+                <button type="submit" class="btn-primary full-width">ยืนยัน OTP</button>
+                <button type="button" class="btn-secondary full-width" onclick="resetFlow()"
+                    style="margin-top: 10px; background: #eee; color: #333;">กลับไปหน้าแรก</button>
+            </form>
+
+            <!-- Step 3: New Password (Hidden initially) -->
+            <form id="step3Form" style="display: none;">
+                <div class="form-group">
+                    <label for="newPassword">รหัสผ่านใหม่</label>
+                    <input type="password" id="newPassword" class="form-control" placeholder="อย่างน้อย 6 ตัวอักษร"
+                        required minlength="6">
+                </div>
+                <div class="form-group">
+                    <label for="confirmPassword">ยืนยันรหัสผ่านใหม่</label>
+                    <input type="password" id="confirmPassword" class="form-control" placeholder="กรอกรหัสผ่านอีกครั้ง"
+                        required minlength="6">
+                </div>
+                <button type="submit" class="btn-primary full-width">เปลี่ยนรหัสผ่าน</button>
             </form>
 
             <div class="divider"><span>หรือ</span></div>
@@ -89,111 +124,185 @@
         </div>
     </main>
 
-    <form id="forgotForm">
-        <div id="alertBox" class="alert-box" style="display: none;">
-            <i class="fas fa-exclamation-circle"></i>
-            <span id="alertMes sage">ไม่พบอีเมลนี้ในระบบ กรุณาลองใหม่อีกครั้ง</span>
-        </div>
+    <div id="alertBox" class="alert-box"
+        style="display: none; position: fixed; top: 20px; right: 20px; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+        <i class="fas fa-exclamation-circle"></i>
+        <span id="alertMessage"></span>
+    </div>
 
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/api-client.js"></script>
 
     <script>
-document.getElementById('forgotForm').addEventListener('submit', function(e) {
-    e.preventDefault();
+        let currentPhone = '';
+        let currentOtp = '';
 
-    const email = document.getElementById('email').value.trim();
-    const alertBox = document.getElementById('alertBox');
+        // Step 1: Request OTP
+        document.getElementById('step1Form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const phone = document.getElementById('phone').value.trim();
+            if (!phone) return;
 
-    if (!email) {
-        showAlert('กรุณากรอกอีเมล', false);
-        return;
-    }
+            try {
+                // Call API to request OTP (Implementing in backend)
+                // For now, we will simulate the API call here if backend is not ready, 
+                // but we SHOULD call the real backend if possible.
+                // Assuming backend route: POST /api/auth/request-otp { phone }
 
-    // Check if email exists in users
-    const users = JSON.parse(localStorage.getItem('easyrice_users')) || [];
-    const userExists = users.some(user => user.email === email);
+                const response = await fetch('/api/auth/request-otp', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ phone })
+                });
 
-    if (!userExists) {
-        showAlert('ไม่พบอีเมลนี้ในระบบ กรุณาตรวจสอบอีเมลหรือสมัครสมาชิกใหม่', false);
-        return;
-    }
+                const data = await response.json();
 
-    // Simulate sending reset email
-    showAlert('ระบบได้ส่งลิงก์รีเซ็ตรหัสผ่านไปยังอีเมลของคุณแล้ว กรุณาตรวจสอบกล่องจดหมาย', true);
+                if (!response.ok) throw new Error(data.error || 'Failed to send OTP');
 
-    setTimeout(() => {
-        window.location.href = 'sign-in.html';
-    }, 2000);
-});
+                currentPhone = phone;
 
-function showAlert(message, success) {
-    const alertBox = document.getElementById('alertBox');
-    const alertMessage = document.getElementById('alertMessage');
+                // Show Mock OTP for convenience
+                Swal.fire({
+                    title: 'OTP Code (Simulation)',
+                    text: `รหัส OTP ของคุณคือ: ${data.mockOtp || '123456'}`,
+                    icon: 'info'
+                });
 
-    alertMessage.textContent = message;
-    alertBox.style.display = 'flex';
+                document.getElementById('step1Form').style.display = 'none';
+                document.getElementById('step2Form').style.display = 'block';
+                document.querySelector('.login-header p').innerText = 'กรอกรหัสยืนยัน 6 หลัก';
 
-    if (success) {
-        alertBox.className = 'alert-box alert-success';
-    } else {
-        alertBox.className = 'alert-box alert-error';
-    }
-}
-</script>
-<!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
+            } catch (error) {
+                Swal.fire('Error', error.message, 'error');
+            }
+        });
 
-<script>
-	// Mobile menu toggle
-	function toggleMenu() {
-		const hamburger = document.getElementById('hamburger');
-		const navMenu = document.getElementById('navMenu');
-		hamburger.classList.toggle('active');
-		navMenu.classList.toggle('active');
-	}
+        // Step 2: Verify OTP
+        document.getElementById('step2Form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const otp = document.getElementById('otp').value.trim();
+            if (!otp) return;
 
-	// Close menu when link clicked
-	document.querySelectorAll('#navMenu a').forEach(link => {
-		link.addEventListener('click', () => {
-			document.getElementById('hamburger').classList.remove('active');
-			document.getElementById('navMenu').classList.remove('active');
-		});
-	});
-</script>
+            try {
+                const response = await fetch('/api/auth/verify-otp', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ phone: currentPhone, code: otp })
+                });
+
+                const data = await response.json();
+                if (!response.ok) throw new Error(data.error || 'Invalid OTP');
+
+                document.getElementById('step2Form').style.display = 'none';
+                document.getElementById('step3Form').style.display = 'block';
+                document.querySelector('.login-header p').innerText = 'ตั้งรหัสผ่านใหม่';
+
+            } catch (error) {
+                Swal.fire('Error', error.message, 'error');
+            }
+        });
+
+        // Step 3: Reset Password
+        document.getElementById('step3Form').addEventListener('submit', async function (e) {
+            e.preventDefault();
+            const newPassword = document.getElementById('newPassword').value;
+            const confirmPassword = document.getElementById('confirmPassword').value;
+
+            if (newPassword !== confirmPassword) {
+                Swal.fire('Error', 'รหัสผ่านไม่ตรงกัน', 'error');
+                return;
+            }
+
+            try {
+                const response = await fetch('/api/auth/reset-password', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ phone: currentPhone, newPassword })
+                });
+
+                const data = await response.json();
+                if (!response.ok) throw new Error(data.error || 'Failed to reset password');
+
+                Swal.fire({
+                    title: 'สำเร็จ!',
+                    text: 'รีเซ็ตรหัสผ่านเรียบร้อยแล้ว กรุณาเข้าสู่ระบบด้วยรหัสผ่านใหม่',
+                    icon: 'success'
+                }).then(() => {
+                    window.location.href = 'sign-in.html';
+                });
+
+            } catch (error) {
+                Swal.fire('Error', error.message, 'error');
+            }
+        });
+
+        function resetFlow() {
+            document.getElementById('step1Form').style.display = 'block';
+            document.getElementById('step2Form').style.display = 'none';
+            document.getElementById('step3Form').style.display = 'none';
+            document.querySelector('.login-header p').innerText = 'ระบุเบอร์โทรศัพท์ของคุณเพื่อรับรหัส OTP';
+            document.getElementById('step1Form').reset();
+            document.getElementById('step2Form').reset();
+            document.getElementById('step3Form').reset();
+        }
+    </script>
+    <!-- Code injected by live-server -->
+    <script>
+        // <![CDATA[  <-- For SVG support
+        if ('WebSocket' in window) {
+            (function () {
+                function refreshCSS() {
+                    var sheets = [].slice.call(document.getElementsByTagName("link"));
+                    var head = document.getElementsByTagName("head")[0];
+                    for (var i = 0; i < sheets.length; ++i) {
+                        var elem = sheets[i];
+                        var parent = elem.parentElement || head;
+                        parent.removeChild(elem);
+                        var rel = elem.rel;
+                        if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                            var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+                            elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+                        }
+                        parent.appendChild(elem);
+                    }
+                }
+                var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+                var address = protocol + window.location.host + window.location.pathname + '/ws';
+                var socket = new WebSocket(address);
+                socket.onmessage = function (msg) {
+                    if (msg.data == 'reload') window.location.reload();
+                    else if (msg.data == 'refreshcss') refreshCSS();
+                };
+                if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+                    console.log('Live reload enabled.');
+                    sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+                }
+            })();
+        }
+        else {
+            console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+        }
+        // ]]>
+    </script>
+
+    <script>
+        // Mobile menu toggle
+        function toggleMenu() {
+            const hamburger = document.getElementById('hamburger');
+            const navMenu = document.getElementById('navMenu');
+            hamburger.classList.toggle('active');
+            navMenu.classList.toggle('active');
+        }
+
+        // Close menu when link clicked
+        document.querySelectorAll('#navMenu a').forEach(link => {
+            link.addEventListener('click', () => {
+                document.getElementById('hamburger').classList.remove('active');
+                document.getElementById('navMenu').classList.remove('active');
+            });
+        });
+    </script>
 </body>
+
 </html>
