--- a/public/pages/checkout.html
+++ b/public/pages/checkout.html
@@ -74,7 +74,7 @@
                     <p style="color: var(--accent-color); font-weight: bold;">
                         <i class="fas fa-exclamation-triangle"></i> หมายเหตุ:
                     </p>
-                    <p>ต้องชำระมัดจำ 50% ของยอดสั่งซื้อทั้งหมดเพื่อยืนยันการจอง
+                    <p>ต้องชำระมัดจำ 50% ของยอดสั่งซื้อทั้งหมดเพื่อยืนยันการสั่งซื้อ
                         หากไม่ทำการแนบหลักฐานการชำระเงินจะไม่สามารถดำเนินการสั่งซื้อได้</p>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                             </label>
                             <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
                                 <input type="radio" name="paymentType" value="deposit" onchange="calculatePrice()">
-                                <span>จอง (มัดจำ 50%)</span>
+                                <span>สั่งซื้อ (มัดจำ 50%)</span>
                             </label>
                         </div>
                     </div>
