--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -89,7 +89,7 @@
                         <label>หัวข้อติดต่อ</label>
                         <select class="form-control">
                             <option>สอบถามเรื่องต้นกล้า</option>
-                            <option>จองคิวรถดำนา</option>
+                            <option>สั่งซื้อบริการรถดำนา</option>
                             <option>ปัญหาการใช้งานเว็บไซต์</option>
                             <option>อื่นๆ</option>
                         </select>
