--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -102,77 +102,12 @@
                 </form>
             </div>
         </div>
-        <script>
-            document.getElementById('contactForm').addEventListener('submit', function (e) {
-                e.preventDefault();
-
-                const name = document.querySelector('input[placeholder="กรอกชื่อของคุณ"]').value.trim();
-                const contact = document.querySelector('input[placeholder="เพื่อให้เราติดต่อกลับ"]').value.trim();
-                const subject = document.querySelector('select').value;
-                const message = document.querySelector('textarea').value.trim();
-
-                // Validation
-                if (!name || !contact || !message) {
-                    showMessage('กรุณากรอกข้อมูลให้ครบถ้วน', false);
-                    return;
-                }
-
-                // Simulate sending message
-                const contactData = {
-                    id: Date.now(),
-                    name: name,
-                    contact: contact,
-                    subject: subject,
-                    message: message,
-                    timestamp: new Date().toISOString(),
-                    status: 'unread'
-                };
-
-                // Store in localStorage (in real app, this would be sent to server)
-                const contacts = JSON.parse(localStorage.getItem('easyrice_contacts')) || [];
-                contacts.push(contactData);
-                localStorage.setItem('easyrice_contacts', JSON.stringify(contacts));
-
-                showMessage('ส่งข้อความสำเร็จ! เจ้าหน้าที่จะติดต่อกลับภายใน 24 ชั่วโมง', true);
-
-                // Reset form
-                this.reset();
-
-                // Hide message after 3 seconds
-                setTimeout(() => {
-                    document.getElementById('contact-message').style.display = 'none';
-                }, 3000);
-            });
-
-            function showMessage(message, success) {
-                let msgDiv = document.getElementById('contact-message');
-                if (!msgDiv) {
-                    msgDiv = document.createElement('div');
-                    msgDiv.id = 'contact-message';
-                    document.getElementById('contactForm').prepend(msgDiv);
-                }
-
-                msgDiv.style.display = 'block';
-                msgDiv.innerHTML = message;
-                msgDiv.style.background = success ? '#e8f5e9' : '#ffebee';
-                msgDiv.style.color = success ? '#2e7d32' : '#c62828';
-                msgDiv.style.border = success ? '1px solid #81c784' : '1px solid #e57373';
-                msgDiv.style.padding = '10px 15px';
-                msgDiv.style.borderRadius = '6px';
-                msgDiv.style.marginBottom = '15px';
-                msgDiv.style.textAlign = 'center';
-            }
-        </script>
-
-        <footer>
-            <div class="container">
-                <p>&copy; 2024 EasyRice - ระบบซื้อขายต้นกล้าและบริการปักดำออนไลน์</p>
-            </div>
-        </footer>
-
+        <script src="../js/api-client.js"></script>
         <script src="../js/easyrice.js"></script>
         <script>
-            document.addEventListener('DOMContentLoaded', updateSignInButton);
+            document.addEventListener('DOMContentLoaded', () => {
+                updateSignInButton();
+            });
 
             function toggleMenu() {
                 const hamburger = document.getElementById('hamburger');
@@ -192,38 +127,58 @@
             document.getElementById('contactForm').addEventListener('submit', async function (e) {
                 e.preventDefault();
 
-                // Collect basic info since we don't have IDs on all inputs in original HTML, assume they are sequential
-                // Based on view_file structure:
-                // Input 1: name (Name)
-                // Input 2: contact (Email/Phone)
-                // Select 1: category
-                // Textarea 1: message
+                // Get values explicitly by ID would be better, but sticking to querySelector for now if IDs aren't there
+                // Or adding IDs to the form inputs if I can't overwrite the HTML above easily?
+                // The HTML above doesn't have IDs on inputs. Let's rely on the selectors or just grab by index/type.
+                // Using querySelector with attributes as seen in previous valid code or just robust logic.
 
                 const inputs = this.querySelectorAll('input');
                 const select = this.querySelector('select');
                 const textarea = this.querySelector('textarea');
 
-                const name = inputs[0].value;
-                const contact = inputs[1].value;
+                // Assuming order: Name, Contact
+                const name = inputs[0].value.trim();
+                const contact = inputs[1].value.trim();
                 const category = select.value;
-                const message = textarea.value;
+                const message = textarea.value.trim();
+
+                if (!name || !contact || !message) {
+                    Swal.fire({
+                        icon: 'warning',
+                        title: 'แจ้งเตือน',
+                        text: 'กรุณากรอกข้อมูลให้ครบถ้วน',
+                        confirmButtonColor: '#ffa000'
+                    });
+                    return;
+                }
 
                 try {
+                    // Ensure api is available
+                    if (typeof api === 'undefined') {
+                        throw new Error('System Error: API Client not loaded');
+                    }
+
                     await api.sendReport({ name, contact, category, message });
-                    Swal.fire({
+
+                    await Swal.fire({
                         icon: 'success',
                         title: 'ส่งข้อความสำเร็จ',
-                        text: 'เราได้รับข้อความของคุณแล้ว',
-                        timer: 2000,
-                        showConfirmButton: false
+                        text: 'เราได้รับข้อความของคุณแล้ว เจ้าหน้าที่จะติดต่อกลับโดยเร็วที่สุด',
+                        timer: 3000,
+                        confirmButtonColor: '#2e7d32'
                     });
                     this.reset();
                 } catch (error) {
-                    Swal.fire('Error', error.message, 'error');
+                    console.error(error);
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'ส่งข้อความไม่สำเร็จ',
+                        text: error.message || 'เกิดข้อผิดพลาดในการเชื่อมต่อ',
+                        confirmButtonColor: '#d32f2f'
+                    });
                 }
             });
         </script>
-        <script src="/project/js/easyrice.js"></script>
 </body>
 
 </html>
